welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:19: error: type mismatch;
 found   : Unit
 required: Int
  while(!haveBaggle()){
  ^